--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@ async function sendEmailsToClients(selectedClients, action) {
     }
     const payload = {
       source: "portal",
-      recordId: propertyInfo.recordId,
+      id: propertyInfo.recordId,
       propertyId: propertyInfo.propertyId,
       propertyAddress: propertyInfo.propertyAddress,
       baEmail: baIdentifier,
@@ -1126,4 +1126,3 @@ document.addEventListener("DOMContentLoaded", () => {
   </script>
 </body>
 </html>
-
